classDiagram
     class TaskItem {
         +int Id
         +string Title
         +string Description
         +TaskStatus Status
         +DateTime Date
         +TimeOnly StartTime
         +TimeOnly EndTime
         +List<int> EventIds
         +List<int> AssignedToIds
         +DateTime UpdatedAt
     }

     class User {
         +int Id
         +string FirstName
         +string LastName
         +string Email
         +string Password
         +string PhoneNumber
         +List<UserRole> Roles
         +List<Competency> Competencies
         +List<int> EventIds
         +bool EmailNotification
         +DateTime LastLogin
         +DateTime CreatedAt
         +DateTime UpdatedAt
     }

     class TaskEvent {
         +int Id
         +string Title
         +DateTime DateForEvent
         +int LocationId
         +string ByCustomer
         +string FoodChoices
         +string SpecialRequest
         +int Participants
     }

     class TaskStatus {
         <<enumeration>>
         NotStarted
         InProgress
         Completed
     }

     class UserRole {
         <<enumeration>>
         CoWorker
         Manager
         Administrator
     }

     class Competency {
         <<enumeration>>
         Dishwasher
         TableSetter
         Chef
         Cashier
         Cleaning
         EventLeader
     }

     TaskItem --> TaskStatus
     TaskItem --> "0..*" TaskEvent : associated with
     User --> "*" UserRole : has
     User --> "*" Competency : has
     User --> "*" TaskEvent : participates in
     TaskItem --> "*" User : assigned to

